# dicom-etl-dagster-snowflake

./: .gitignore  README.md
data/: README.md
services/dicom-pipeline/: .env  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
services/dicom-pipeline/dbt_snowflake/: .env  dbt_project.yml
services/dicom-pipeline/dbt_snowflake/config/: .user.yml  profiles.yml
services/dicom-pipeline/dbt_snowflake/macros/: anonymize.sql  anonymize_columns.sql  get_max_insert_date.sql  normalize.sql
services/dicom-pipeline/dbt_snowflake/models/: sources.yml
services/dicom-pipeline/dbt_snowflake/models/internal/: models.yml  surrogate_key_mapping.sql
services/dicom-pipeline/dbt_snowflake/seeds/: anonymization_mapping.csv  salt.csv
services/dicom-pipeline/dicom_pipeline/: README.md  __init__.py
services/dicom-pipeline/dicom_pipeline/assets/: __init__.py
services/dicom-pipeline/dicom_pipeline/jobs/: __init__.py  compress_raw_images.py  download_raw_data.py  sync_provider_data.py  utils.py
services/dicom-pipeline/dicom_pipeline/ops/: __init__.py  utils.py
services/dicom-pipeline/dicom_pipeline/resources/: __init__.py  dbt.py  directory_resource.py  duckdb_parquet_io_manager.py  healthchecks.py  lambda_resource.py  multi_db_and_parquet_io_manager.py  parquet_io_manager.py  snowflake_io_manager.py
services/dicom-pipeline/dicom_pipeline/sensors/: __init__.py  file_arrival_sensor.py  lambda_function_sensor.py  slack_on_failure_sensor.py
services/img-compressor/: Cargo.toml  Makefile  README.md  template.yaml
services/img-compressor/src/: lib.rs  main.rs
(+42 files in other folders)
